# DRAMUtils

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  dram_utils.cmake
.github/workflows/: CI.yml
cmake/: build_source_group.cmake  build_source_group_include.cmake
include/DRAMUtils/config/: toggling_rate.h
include/DRAMUtils/memspec/: BaseMemSpec.h  MemSpec.h
include/DRAMUtils/memspec/standards/: MemSpecDDR3.h  MemSpecDDR4.h  MemSpecDDR5.h  MemSpecGDDR5.h  MemSpecGDDR5X.h  MemSpecGDDR6.h  MemSpecHBM2.h  MemSpecHBM3.h  MemSpecLPDDR4.h  MemSpecLPDDR5.h  MemSpecSTTMRAM.h  MemSpecWideIO.h  MemSpecWideIO2.h
include/DRAMUtils/util/: id_variant.h  json.h  json_config.h  json_utils.h  types.h
src/memspec/: CMakeLists.txt
src/memspec/DRAMUtils/memspec/: BaseMemSpec.h  MemSpec.h
src/memspec/DRAMUtils/memspec/standards/: MemSpecDDR3.h  MemSpecDDR4.h  MemSpecDDR5.h  MemSpecGDDR5.h  MemSpecGDDR5X.h  MemSpecGDDR6.h  MemSpecHBM2.h  MemSpecHBM3.h  MemSpecLPDDR4.h  MemSpecLPDDR5.h  MemSpecSTTMRAM.h  MemSpecWideIO.h  MemSpecWideIO2.h
src/util/: CMakeLists.txt
src/util/DRAMUtils/util/: json.h  json_variant.h  types.h  util.cpp  util.h
tests/: CMakeLists.txt
tests/tests_memspec/: CMakeLists.txt
tests/tests_memspec/base/: test_base.cpp
tests/tests_memspec/resources/: lpddr4.json
